Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102023

Incorrect shadows from SpotLight and PointLight

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.5, 6.3.1, 6.4.0 Beta1
    • 6.2.1, 6.4
    • Quick: 3D
    • None
    • df5bd7cf9a (qt/qtquick3d/dev) b0eacbef06 (qt/qtquick3d/6.3) b0eacbef06 (qt/tqtc-qtquick3d/6.3) df5bd7cf9a (qt/tqtc-qtquick3d/dev) f9b3d4a394 (qt/tqtc-qtquick3d/6.2) b0eacbef06 (qt/tqtc-qtquick3d/6.3.1) df5bd7cf9a (qt/qtquick3d/6.4)
    • 2022 Qt Quick 3D: Week 17-18

      The attached example shows a SpotLight rotating around a cube model. The shadow cast from the cube seems to vary in intensity based on the angle. In some cases it has a negative intensity, i.e. the shadowed area is brighter than the lit area.

      Changing the SpotLight to a PointLight gives exactly the same result for the shadows.

        1. shadow.qml
          2 kB
          Paul Olav Tvete
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            janichol Andy Nichols
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes